<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ffdfe0e0"
    android:gravity="center|top"
    android:focusable="false">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:id="@+id/textView"
        android:background="#ffff418f"
        android:textColor="#ffffffff"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_title_material"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#ff75726e" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="#ff817e7a" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text2"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:text="@string/Edit"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="37dp"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button1"
        android:id="@+id/button"
        android:layout_above="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:layout_alignEnd="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/text3"
        android:id="@+id/textView5"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/editText"
        android:textSize="@dimen/abc_text_size_large_material" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/icon"
        android:background="#00000000"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="41dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView6"
        android:text="@string/win"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="25dp"
        android:layout_toStartOf="@+id/imageView"
        android:layout_alignTop="@+id/imageView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Try"
        android:id="@+id/button2"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:visibility="invisible"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/score"
        android:id="@+id/textView7"
        android:layout_above="@+id/button2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/scorevalue"
        android:id="@+id/textView8"
        android:layout_alignTop="@+id/textView7"
        android:layout_alignEnd="@+id/button2" />

</RelativeLayout>
